<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"

        android:background="@drawable/shape_score"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_score"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="0"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_numQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/shape_game"
        android:padding="4dp"
        android:text="0/5"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_NameUser" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/str_welcome"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <TextView
        android:id="@+id/tv_NameUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="Ahmed M. Mosa"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/tv_ageUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="[22]"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/tv_NameUser"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <GridLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:columnCount="3"
        android:rowCount="3"

        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_NameUser">


        <TextView
            android:id="@+id/tv_0to0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"
            android:background="@drawable/shape_game"
            android:gravity="center"
            android:padding="40dp"
            android:text="10"
            android:textColor="@color/black"
            android:textSize="24dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_0to1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"
            android:background="@drawable/shape_game"
            android:gravity="center"
            android:padding="40dp"
            android:text="15"
            android:textColor="@color/black"
            android:textSize="24dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_0to2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"
            android:background="@drawable/shape_game"
            android:gravity="center"
            android:padding="40dp"
            android:text="20"
            android:textColor="@color/black"
            android:textSize="24dp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tv_1to0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"
            android:background="@drawable/shape_game"
            android:gravity="center"
            android:padding="40dp"
            android:text="25"
            android:textColor="@color/black"
            android:textSize="24dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_1to1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"
            android:background="@drawable/shape_game"
            android:gravity="center"
            android:padding="40dp"
            android:text="@string/str_Question"
            android:textColor="@color/red"
            android:textSize="24dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_1to2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"
            android:background="@drawable/shape_game"
            android:gravity="center"
            android:padding="40dp"
            android:text="35"
            android:textColor="@color/black"
            android:textSize="24dp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tv_2to0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"
            android:background="@drawable/shape_game"
            android:gravity="center"
            android:padding="40dp"
            android:text="40"
            android:textColor="@color/black"
            android:textSize="24dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_2to1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"
            android:background="@drawable/shape_game"
            android:gravity="center"
            android:padding="40dp"
            android:text="45"
            android:textColor="@color/black"
            android:textSize="24dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_2to2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="2dp"
            android:background="@drawable/shape_game"
            android:gravity="center"
            android:padding="40dp"
            android:text="45"
            android:textColor="@color/black"
            android:textSize="24dp"
            android:textStyle="bold" />


    </GridLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/btn_newGame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/et_enterNumber"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:background="@drawable/shape_score"
            android:hint="@string/str_enter_a_number"
            android:inputType="number"
            android:paddingStart="20dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_Check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/shape_score"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/str_Check" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_newGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/shape_score"
        android:text="@string/str_NewGame"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>